# ROS

./: .gitignore  README.md  rospack_cache_03286413472103002096  rospack_cache_03556065424631428552  rospack_cache_08554556238755503895  rospack_cache_10766348938010699051  rospack_cache_16962432586525702692  rospack_cache_18019822870472497271  rospack_cache_18259481233846403282
src/adambot/: CMakeLists.txt  package.xml
src/adambot/config/: adam.rviz  controller.yaml  gazebo
src/adambot/config/carto/: backpack_2d.lua  cartographer_config.lua
src/adambot/config/mvbs/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/adambot/launch/: adam_controller.launch  adam_nav.launch  base_room.launch  carto_localization.launch  carto_mapping.launch  debug.launch  gmapping.launch
src/adambot/maps/carto/: map.pbstream
src/adambot/models/: bed.model  bookshelft.model  chair.model  cupboard.model  sofa.model  table.model  tea_table.model
src/adambot/models/bottles/: green_bottle.model  red_bottle.model
src/adambot/urdf/: base.urdf.xacro  robot.urdf.xacro
src/adambot/urdf/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/adambot/urdf/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
src/adambot/urdf/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/orbslam/: CMakeLists.txt  package.xml
src/orbslam/config/: cam.yaml
src/orbslam/src/: cali.cpp  usb_cam_publisher.cpp  verify.cpp
